--- a/pages/about.html
+++ b/pages/about.html
@@ -17,7 +17,7 @@
 
     <div class="columns">
         <div class="column">
-          <h2>About Me</h2>
+            <h3>About Me</h3>
             <p>I am an undergraduate Computer Science student at the American University of Science and Technology, where I have built a solid foundation in programming, algorithms, and software development methodologies. With knowledge in languages like Java, Python, and C++, I have also developed strong skills in database management and software testing. </p>
 
             <h3>Technical Skills</h3>
@@ -69,44 +69,11 @@
                 <h3>Contact</h3>
                 <p><strong>Email:</strong> <a href="mailto:lynesultane@gmail.com">lynesultane@gmail.com</a></p>
                 <p><strong>Phone:</strong> +961 71 912 319</p>
-                <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/lyne-al-sultan-b810b8229/" target="_blank">Lyne Al Sultan</a></p>
+                <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/lyne-al-sultan-b810b8229/">Lyne Al Sultan</a></p>
                 <p><strong>Address:</strong> Baabda, Al Hadat</p>
             </div>
         </div>
     </div>
 </div>
-
-
-<style>
-  .about-me {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      color: #333;
-      max-width: 1200px; /* Increase max-width for two columns */
-      margin: 0 auto;
-  }
-
-  h2, h3 {
-      color: #0073b1;
-  }
-
-  ul {
-      list-style-type: square;
-      padding-left: 20px;
-  }
-
-  .columns {
-        display: flex; /* Create a flex container for columns */
-        gap: 20px; /* Space between columns */
-    }
-
-    .column {
-        flex: 1; /* Allow columns to grow equally */
-    }
-
-    .contact-info {
-        margin-top: 20px;
-    }
-</style>
 </body>
 </html>
